--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,7 +55,7 @@
 .inner {
   margin-left: auto;
   margin-right: auto;
-  max-width: 720px;
+  max-width: 1080px;
 }
 
 .inner-wide {
@@ -304,7 +304,7 @@
 .post-feed .post {
   margin-left: auto;
   margin-right: auto;
-  max-width: 720px;
+  max-width: 1080px;
 }
 
 .post-feed .post-title {
@@ -964,7 +964,8 @@
     margin-left: -180px;
     margin-right: -180px;
     max-width: none;
-    width: 1080px;
+    width: 100%;
+    margin: 0 auto;
   }
 
   .outer {
