--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -84,8 +84,7 @@
     {% include sidebar.html %}
     {% include analytics.html %}
     <!-- Javascript Assets -->
-    <script src="{{ site.baseurl }}/assets/js/jquery-3.3.1.min.js"></script>
-    <script src="{{ site.baseurl }}/assets/js/plugins.js"></script>
+    <script src="{{ site.baseurl }}/assets/js/skrollTop.min.js"></script>
     <script src="{{ site.baseurl }}/assets/js/custom.js"></script>
 
 </body>
