--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 ---
-some: 'thing'
+some: thing
 # this must be present https://stackoverflow.com/questions/53638446/jekyll-seo-tag-doesnt-work-within-github-pages
 ---
 <!DOCTYPE html>
