--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,8 @@ some: thing
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    {% include head-seo.html %}
+
     {% if site.plugins_dir contains 'jekyll-seo-tag' %}
     {% include head-seo.html %}
     {% else %}
