--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% if site.plugins_dir contains 'jekyll-seo-tag' %}
+    {% if site.plugins contains 'jekyll-seo-tag' %}
     {% include head-seo.html %}
     {% else %}
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.name | escape }}{% endif %}</title>
