--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,3 @@
----
-# this must be present https://stackoverflow.com/questions/53638446/jekyll-seo-tag-doesnt-work-within-github-pages
----
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,12 +5,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {{site | jsonify}}
+
+    {% if site.plugins contains 'jekyll-seo-tag' %}
     {% include head-seo.html %}
+    {% else %}
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.name | escape }}{% endif %}</title>
     <meta name="description"
         content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html', '' | absolute_url }}">
+    {% endif %}
 
     <!-- Site Favicon -->
     <link rel="shortcut icon" href="{{ site.url }}/{{ site.baseurl }}{{ site.favicon }}" type="image/png" />
